<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:id="@+id/categoryScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/categoryLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/distanceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <Button
                android:id="@+id/areaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area" />

            <Button
                android:id="@+id/volumeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume" />

            <Button
                android:id="@+id/massButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mass" />

            <Button
                android:id="@+id/temperatureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature" />

            <Button
                android:id="@+id/timeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/fromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <HorizontalScrollView
        android:id="@+id/fromScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/fromLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/distanceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/toLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <HorizontalScrollView
        android:id="@+id/toScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/toLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/distanceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/ioLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/inputLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".50"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/inputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inputLabel" />

            <EditText
                android:id="@+id/inputEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/outputLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".50"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/outputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outputLabel" />

            <EditText
                android:id="@+id/outputEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>